src/objects/Community_Based_Trainer_Field_Visit__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Visit__c</fullName>
        <label>Date of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>District where the activity was taking place</description>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Community Based Trainer Field Visits</relationshipLabel>
        <relationshipName>Community_Based_Trainer_Field_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interview_Latitude__c</fullName>
        <description>Latitude of the field visit</description>
        <label>Interview Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Longitude__c</fullName>
        <description>Longitude of the field visit</description>
        <label>Interview Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Trainer__c</fullName>
        <label>Name of Trainer</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Community Based Trainer person object</description>
        <label>Community Based Trainer</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Community Based Trainer Field Visits</relationshipLabel>
        <relationshipName>Community_Based_Trainer_Field_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcounty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The subcounty where the activity took place</description>
        <label>Subcounty</label>
        <referenceTo>Subcounty__c</referenceTo>
        <relationshipLabel>Community Based Trainer Field Visits</relationshipLabel>
        <relationshipName>Community_Based_Trainer_Field_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subregion__c</fullName>
        <description>Subregion in which this visit (i.e. district &amp; subcounty) are in</description>
        <label>Subregion</label>
        <picklist>
            <picklistValues>
                <fullName>Acholi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bukedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bunyoro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elgon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lango</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Nile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karamoja</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Also the CBT activity</description>
        <label>Activity</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Community Based Trainer Field Visits</relationshipLabel>
        <relationshipName>Community_Based_Trainer_Field_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>Time of the activity</description>
        <label>Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Visit__c</fullName>
        <label>Type of Visit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Community Based Trainer Field Visit</label>
    <nameField>
        <label>Community_Based_Trainer_Field_Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Based Trainer Field Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>